--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <meta name="description" content="Ruichu Cai&#39;s home page">
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <link rel="shortcut icon" href="gdut.png">
-<title>Ruichu Cai's Homepage @ Gdut University</title>
+<title>Ruichu Cai's Homepage @ GuangDong University of Technology</title>
 
 <body> 
 <div id="layout-content" style="margin-top:25px">
@@ -21,10 +21,6 @@
                     Guangdong University of Technology <br>
                     Guangdong, China. 510000.<br>
                     <br>
-                    Portfolio: https://sites.google.com/site/
-                    <br>
-                    Github: https://github.com/DMIRLAB-Group
-                    <br><br>
                     Email: cairuichu@gmail.com
                     <br>
                     Mobile: +86-158-0003-0523
@@ -36,6 +32,7 @@
         </tr>
     </tbody>
 </table>
+
 
 <h2>Biography</h2>
 <p>
@@ -71,6 +68,15 @@
 
 </ul>
 <br>
+<h2>Source</h2>
+<br>
+Portfolio:  <a href="https://sites.google.com/site/cairuichu">https://sites.google.com/site/cairuichu </a>
+<br>
+<br>
+
+Github: <a href="https://github.com/DMIRLAB-Group">https://github.com/DMIRLAB-Group
+</a>
+
 <h2>Experience</h2>
 <ul>
     <li>
@@ -113,6 +119,13 @@
 
 </ul>
 
+<h2>News</h2>
+<ul>
+	<li> [2021.12] One paper was accepted by 
+    </li>
+
+</ul>
+
 <h2>Selected Projects</h2>
 <ul>
     <li>
@@ -143,50 +156,21 @@
 
 <h2>Selected Publications<small></small></h2>
 
-<font size="3"><b>2021</b></font>
+<font size="3"><b>Causal Discovery</b></font>
 
 <ul>
-    <li>
-        <b>Ruichu Cai</b>, Jinjie Yuan, Boyan Xu, Zhifeng Hao. SADGA: Structure-Aware Dual Graph Aggregation Network for Text-to-SQL. <i><b>NeurIPS</b></i> 2021
-    </li>
-    <li>
-        <b>Ruichu Cai</b>, Jiawei Chen, Zijian Li, Wen Chen, Keli Zhang, Junjian Ye, Zhuozhang Li, Xiaoyan Yang, Zhenjie Zhang. Time Series Domain Adaptation via Sparse Associative Structure Alignment. <i><b>AAAI</b></i> 2021
-    </li>
-    <li>
-        <b>Ruichu Cai</b>, Hao Zhang, Wen Liu, Shenghua Gao, Zhifeng Hao. Appearance-Motion Memory Consistency Network for Video Anomaly Detection. <i><b>AAAI</b></i> 2021
-    </li>
     <li>
         Jie Qiao, <b>Ruichu Cai#</b>, Kun Zhang, Zhenjie Zhang, Zhifeng Hao. Causal Discovery with Confounding Cascade Nonlinear Additive Noise Models. ACM Transactions on Intelligent Systems and Technology (<i><b>TIST</b></i>), 2021: 12(6): 1-28
     </li>
     <li>
         Wei Chen, <b>Ruichu Cai*</b>, Kun Zhang, Zhifeng Hao. Causal Discovery in Linear Non-Gaussian Acyclic Model with Multiple Latent Confounders. <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2021
     </li>
-</ul>
-
-
-
-<font size="3"><b>2020</b></font>
-<ul>
-
-    <li>
-        <b>Ruichu Cai</b>, Jiahao Li, Zhenjie Zhang, Xiaoyan Yang, Zhifeng Hao. DACH: Domain Adaptation without Domain Information. <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2020:31(12):5055-5067
-    </li>
     <li>
         Feng Xie, <b>Ruichu Cai*</b>, Yan Zeng, Jiantao Gao, Zhifeng Hao. An Efficient Entropy-Based Causal Discovery Method for Linear Structural Equation Models with IID Noise Variables. <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2020, 31(5): 1667 - 1680
-    </li>
-     <li>
-         <b>Ruichu Cai</b>, Zhihao Liang, Boyan Xu, zijian li, Yao Chen and Yuexing Hao. TAG: Type Auxiliary Guiding for Code Comment Generation. <i><b>ACL</b></i> 2020
     </li>
     <li>
         <b>Ruichu Cai</b>, Jincheng Ye, Jie Qiao, Huiyuan Fu, Zhifeng Hao. FOM: Fourth-Order Moment based Causal Direction Identification on the Heteroscedastic Data. <i><b>Neural Networks</b></i>, 2020, 124:193-201
     </li>
-    <li>
-        <b>Ruichu Cai</b>, Xuexin Chen, Yuan Fang, Min Wu, Yuexing Hao. Dual-Dropout Graph Convolutional Network for Predicting Synthetic Lethality in Human Cancers. <i><b>Bioinformatics</b></i>, 2020, 36(16):4458-4465
-    </li>
-</ul>
-
-<font size="3"><b>2019 and prior</b></font>
-<ul>
     <li>
         <b>Ruichu Cai</b>, Feng Xie, Clark Glymour, Zhifeng Hao, Kun Zhang. Triad Constraints for Learning Causal Structure of Latent Variables. <i><b>NeurIPS</b></i> 2019
     </li>
@@ -194,13 +178,7 @@
         <b>Ruichu Cai</b>, Jie Qiao, Kun Zhang, Zhenjie Zhang, Zhifeng Hao. Causal Discovery with Cascade Nonlinear Additive Noise Model. <i><b>IJCAI</b></i> 2019
     </li>
     <li>
-        <b>Ruichu Cai</b>, Zijian Li, Pengfei Wei, Jie Qiao, Kun Zhang, Zhifeng Hao. Learning Disentangled Semantic Representation for Domain Adaptation. <i><b>IJCAI</b></i> 2019
-    </li>
-    <li>
         <b>Ruichu Cai</b>, Zhenjie Zhang, Zhifeng Hao, Marianne Winslett. Sophisticated Merging over Random Partitions: A Scalable and Robust Causal Discovery Approach. <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2018:29(8) : 3623 - 3635
-    </li>
-    <li>
-        <b>Ruichu Cai</b>, Boyan Xu, Xiaoyan Yang, Zhengjie Zhang, Zijian Li, Zhihao Liang. An Encoder-Decoder Framework Translating Natural Language to Database Queries. <i><b>IJCAI</b></i> 2018
     </li>
     <li>
         <b>Ruichu Cai</b>, Jie Qiao, Zhenjie Zhang , et al. SELF: Structural Equational Likelihood Framework for Causal Discovery. <i><b>AAAI</b></i> 2018
@@ -209,19 +187,61 @@
         <b>Ruichu Cai</b>, Jie Qiao, Kun Zhang, Zhenjie Zhang, Zhifeng Hao. Causal Inference from Discrete Data using Hidden Compact Representation. <i><b>NeurIPS</b></i> 2018
     </li>
     <li>
+        <b>Ruichu Cai</b>, Zhenjie Zhang, Zhifeng Hao. SADA: A General Framework to Support Robust Causation Discovery. <i><b>ICML</b></i> 2013
+    </li>
+</ul>
+
+<font size="3"><b>Causality-Related Learning</b></font>
+
+<ul>
+    <li>
+        <b>Ruichu Cai</b>, Jiawei Chen, Zijian Li, Wen Chen, Keli Zhang, Junjian Ye, Zhuozhang Li, Xiaoyan Yang, Zhenjie Zhang. Time Series Domain Adaptation via Sparse Associative Structure Alignment. <i><b>AAAI</b></i> 2021
+    </li>
+    <li>
+        <b>Ruichu Cai</b>, Jiahao Li, Zhenjie Zhang, Xiaoyan Yang, Zhifeng Hao. DACH: Domain Adaptation without Domain Information. <i>IEEE Transactions on Neural Networks and Learning Systems</i>, 2020:31(12):5055-5067
+    </li>
+    <li>
+        <b>Ruichu Cai</b>, Zijian Li, Pengfei Wei, Jie Qiao, Kun Zhang, Zhifeng Hao. Learning Disentangled Semantic Representation for Domain Adaptation. <i><b>IJCAI</b></i> 2019
+    </li>
+</ul>
+
+<font size="3"><b>Application of Causal Discovery</b></font>
+
+<ul>
+    <li>
         <b>Ruichu Cai</b>, Zhenjie Zhang, Zhifeng Hao, Marianne Winslett. Understanding Social Causalities Behind Human Action Sequences. <i>IEEE Transactions on Neural Networks and Learning Systems</i>. 2017, 28(8):1801-1813.
     </li>
+</ul>
+
+<font size="3"><b>Deep Learning</b></font>
+
+<ul>
+    <li>
+        <b>Ruichu Cai</b>, Jinjie Yuan, Boyan Xu, Zhifeng Hao. SADGA: Structure-Aware Dual Graph Aggregation Network for Text-to-SQL. <i><b>NeurIPS</b></i> 2021
+    </li>
+    <li>
+        <b>Ruichu Cai</b>, Hao Zhang, Wen Liu, Shenghua Gao, Zhifeng Hao. Appearance-Motion Memory Consistency Network for Video Anomaly Detection. <i><b>AAAI</b></i> 2021
+    </li>
+    <li>
+        <b>Ruichu Cai</b>, Zhihao Liang, Boyan Xu, zijian li, Yao Chen and Yuexing Hao. TAG: Type Auxiliary Guiding for Code Comment Generation. <i><b>ACL</b></i> 2020
+   </li>
+   <li>
+        <b>Ruichu Cai</b>, Xuexin Chen, Yuan Fang, Min Wu, Yuexing Hao. Dual-Dropout Graph Convolutional Network for Predicting Synthetic Lethality in Human Cancers. <i><b>Bioinformatics</b></i>, 2020, 36(16):4458-4465
+    </li>
+    <li>
+        <b>Ruichu Cai</b>, Boyan Xu, Xiaoyan Yang, Zhengjie Zhang, Zijian Li, Zhihao Liang. An Encoder-Decoder Framework Translating Natural Language to Database Queries. <i><b>IJCAI</b></i> 2018
+    </li>
+</ul>
 
 
 
+<font size="3"><b>2019 and prior</b></font>
+<ul>
     <li>
         <b>Ruichu Cai</b>, Zijie Lu, Li Wang, Zhenjie Zhang. DITIR: Distributed Index for High Throughput Trajectory Insertion and Real-time Temporal Range Query. <i><b>PVLDB</b></i> 2017
     </li>
     <li>
         <b>Ruichu Cai</b>, Zhenjie Zhang, Srinivasan Parthasarathy, Anthony K. H. Tung, Zhifeng Hao, Wen Zhang. Multi-Domain Manifold Learning for Drug-Target Interaction Prediction. <i><b>SDM</b></i> 2016
-    </li>
-    <li>
-        <b>Ruichu Cai</b>, Zhenjie Zhang, Zhifeng Hao. SADA: A General Framework to Support Robust Causation Discovery. <i><b>ICML</b></i> 2013
     </li>
 
     <li>
